addons/opa-gatekeeper/nodeport-block/node-port-block-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNodePort
metadata:
  name: block-node-port
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: 
          - ["Service"]
          excludedNamespaces:
      - "kube-system"
      - "rafay-infra"
      - "rafay-system"
  parameters:
    repos:
      - "registry.rafay.us"
      }
